update concurrent-02-lock